--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,20 @@ main {
   padding: 20px;
   align-items: flex-start;
 }
+.box{
+  width: 100%;
+  max-width: 1580px ;
+  margin: 0 auto;
+  padding: 10px 20px;
+
+}
+.container{
+  width: 100%;
+  max-width: 1680px ;
+  margin: 0 auto;
+  padding: 10px 20px;
+  padding-top: 5px;
+}
 
 .dessert-container {
   display: grid;
@@ -44,10 +58,6 @@ main {
   height: 180px;
   object-fit: cover;
   border-radius: 8px;
-}
-.box{
-  padding: 0 30px;
-
 }
 h1{
   margin-left: 30px
@@ -88,8 +98,9 @@ h1{
   border: none;
   font-size: 18px;
   cursor: pointer;
-  color: #333;
+
 }
+
 .counter button:first-child{
   margin-top: -8px;
 
@@ -166,8 +177,8 @@ h1{
 
 .remove-btn {
   border: 1px solid #AD8A85;
-  font-size: 16px;
-  padding: 4px 7px;
+  font-size: 14px;
+  padding: 6px 9px;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -238,15 +249,17 @@ h1{
   height: auto;
   object-fit: cover;
 }
-
+.card-price h3:last-child{
+  margin-left: -80px;
+}
 .card-price p {
-  margin-left: -20px;
+  margin-left: -80px;
 }
 
 .card-name {
   font-size: 18px;
   font-weight: bold;
-  text-align: center;
+  margin-left: -80px;
 }
 
 @media (max-width: 1024px) {
