--- a/src/App.css
+++ b/src/App.css
@@ -207,6 +207,119 @@ h1{
   border: 1px solid #e4e2e1;
 }
 
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
+
+.modal {
+  background: white;
+  padding: 40px;
+  border-radius: 10px;
+  width: 550px;
+  text-align: start;
+  transform: translateY(-50px);
+  transition: transform 0.3s ease-in-out;
+
+}
+.order-title{
+  color: #87635A;
+}
+.success-icon {
+  width: 50px;
+  margin-bottom: 8px;
+}
+
+.order-details {
+  background: #f8f8f8;
+  padding: 25px;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+
+.order-item {
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+  margin-bottom: 20px;
+}
+.orderconfirm-amount span{
+  font-weight: 600;
+  color: #C73B0F;
+}
+.orderconfirm-price{
+  margin-left: auto;
+}
+.orderconfirm-name{
+  color: #260F08;
+  font-weight: 600;
+}
+.order-total{
+  color: #260F08;
+  font-weight: 400;
+  font-size: 18px;
+}
+.close-btn {
+  background: #d35400;
+  color: white;
+  padding: 16px;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal-overlay.active .modal {
+  transform: translateY(0);
+}
+
+.order-container {
+  max-width: 400px;
+  margin: 50px auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  text-align: center;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.order-items {
+  max-height: 300px;
+  overflow-y: auto;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 8px;
+}
+
+.order-item {
+  padding: 5px 0;
+  border-bottom: 1px dashed #ddd;
+}
+
+.redirect-text {
+  font-size: 14px;
+  color: gray;
+  margin-top: 15px;
+}
+
+
 @media (max-width: 1024px) {
   main {
     flex-direction: column;
